[gd_scene load_steps=4 format=3 uid="uid://dyfekk4v0d6s7"]

[ext_resource type="Script" path="res://Scripts/player/player.gd" id="1_ty6xy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sjxwy"]

[sub_resource type="SphereShape3D" id="SphereShape3D_1sn8y"]
radius = 0.776523

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_ty6xy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_sjxwy")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.538035, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]

[node name="GroundCheck" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.859636, 0)

[node name="HandPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.39711, 0.295741, -1.22707)

[node name="WeaponDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.734615, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="WeaponDetector"]
shape = SubResource("SphereShape3D_1sn8y")
